add some photos

--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -162,6 +162,11 @@ Por essa razão nenhuma das duas foi contemplada pela nossa estrutura.
 
 \pagebreak
 \section{Registo e Login}
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=60mm]{menuprincipal.png}
+\caption{Menu inicial}
+\end{figure}
 \par Uma das funções mais básicas da aplicação baseia-se no registo e login de Utilizadores. No Menu inicial o utilizador tem
 a opção de se registar ou então fazer login caso já possua uma conta.
 \par Caso o utilizador deseje registar uma conta na aplicação terá de fornecer o seu e-mail, nome, password,
@@ -176,7 +181,7 @@ executar o método da classe \textbf{User} que permite obter a password apenas v
 Sempre que é necessário confirmar se a password fornecida coincide com a guardada no utilizador o programar encripta a password fornecida e verifica se é igual ao resultado da encriptação já armazenado.\\
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=110mm]{registo.png}
+\includegraphics[width=100mm]{registo.png}
 \caption{Registo de um utilizador}
 \end{figure}
 \\
@@ -193,11 +198,16 @@ conhece, registar uma activadade, consultar as suas actividades, enviar pedidos 
 caches que se encontram a uma determinada distância (raio) de uma certa localização, indicada pelo utilizador. \\
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=110mm]{login.png}
+\includegraphics[width=100mm]{login.png}
 \caption{Menu após o login}
-\end{figure}
 
-\pagebreak
+\end{figure}
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=90mm]{getNearCaches.png}
+\caption{Encontrar caches perto de uma dada localização}
+\end{figure}
+\newpage
 \section{Atividades e Estatísticas}
 
 \subsection{Atividades}
@@ -260,9 +270,16 @@ Tentamos criar um array para ter em cada indice o mês ligado ao conjunto de ati
 \par Permitimos ao user ver as suas estatiticas globais, anuais (de um dado ano) e mensais. Para as estatisticas mensais assumimos que ele quer ver um dado mês do current year (2015). Mas tal pode ser alterado facilmente, pedindo apenas mais uma informação extra ao user (que ano quer) antes de mostrar informações destas estatísticas.
 
 \par Existe ainda uma opção para ver um gráfico de quantas caches dos tipos existentes o usuário encontrou, num dado mês.
-
-
-
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=90mm]{2015STATS.png}
+\caption{Estatísticas anuais do ano 2015 de um utilizador}
+\end{figure}
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=90mm]{statsmes.png}
+\caption{Exemplo de estatísticas de um dado mês}
+\end{figure}
 
 \pagebreak
 \section{Amigos}
