--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -200,8 +200,8 @@ os métodos necessários da classe \textbf{GeocachingPOO} que por sua vez invoca
 \par Caso o utilizador especifique um e-mail já em uso será negado o registo da conta. Caso se verifique que o utilizador se
 possa registar uma mensagem de sucesso aparecerá no ecrã, caso contrário uma mensagem de erro, informando o utilizador
 o porquê da falha do registo.
-\par Aproveitamos para implementar um método que encripta a password do utilizador para que deste modo, se um utilizador 
-executar o método da classe \textbf{User} que permite obter a password apenas verá o resultado da encriptação. 
+\par Aproveitamos para implementar um método que encripta a password do utilizador para que deste modo, se um utilizador
+executar o método da classe \textbf{User} que permite obter a password apenas verá o resultado da encriptação.
 Sempre que é necessário confirmar se a password fornecida coincide com a guardada no utilizador o programar encripta a password fornecida e verifica se é igual ao resultado da encriptação já armazenado.\\
 \begin{figure}[ht!]
 \centering
@@ -218,7 +218,7 @@ até ao momento.
 \par A partir deste menu de utilizador o utilizador consegue executar todas as funções básicas propostas, como, por exemplo,
 mudar informações pessoais (nome, e-mail, género, password,..), criar uma cache de enter os 4 tipos que a aplicação
 conhece, registar uma activadade, consultar as suas actividades, enviar pedidos de amizade, etc.
-\par Decidimos também implementar uma opção no menu relativo a caches que permita a um utilizador descobrir quais as 
+\par Decidimos também implementar uma opção no menu relativo a caches que permita a um utilizador descobrir quais as
 caches que se encontram a uma determinada distância (raio) de uma certa localização, indicada pelo utilizador. \\
 \begin{figure}[ht!]
 \centering
@@ -324,7 +324,10 @@ própria aplicação.
 
 \pagebreak
 \section{Eventos}
-TODO
+
+Os eventos são situações oportunos nas quais os utilizadores se podem inscrever.  Neste momento, a plataforma não foi capaz de suportar eventos, detendo no entanto já alguma estruturação neste sentido. Ou seja, existem já métodos para simular eventos automaticamente, através das médias estatísticas de um utilizador. Por exemplo, 5 caches mistério por dia é a media de um utilizador, sendo assim, assume-se que esse valor, multiplicado por um factor aleatório entre 0.5 e 1.5 será o número de caches desse tipo que ele irá encontrar. Mesmo assim, não existe neste momento nenhuma interação com a main destes métodos, pois encontram-se incompletas.
+
+Apesar disso, a estruturação foi realizada de forma a contemplar fácil extensabilidade.
 
 
 
