--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -22,7 +22,7 @@
 \center % Center everything on the page
 
 \textsc{\LARGE Universidade do Minho}\\[1.5cm] % Name of your university/college
-\textsc{\Large LEI}\\[0.5cm] % Major heading such as course name
+\textsc{\Large LEI - Grupo 42}\\[0.5cm] % Major heading such as course name
 \textsc{\large Programação Orientada aos Objetos}\\[0.5cm] % Minor heading such as course title
 
 \HRule \\[0.4cm]
