--- a/reportGeo.tex
+++ b/reportGeo.tex
@@ -371,7 +371,7 @@ na mesma diretoria onde se executa a aplicação o estado anterior não será ca
 \section{Tratamento de Excepções}
 \quad Decidimos colocar todas as excepções num package chamado Exceptions para uma melhor visualização das classes e
 clareza no diagrama. Para todas as classes que implementam Excepções é feito import deste Package. Apenas a função
-\em main faz o tratamento de Excepções.
+\emph{ main} faz o tratamento de Excepções.
 \pagebreak
 \section{Conclusão}
 No geral do trabalho foi-nos possível atingir uma plataforma que permitia realizar todas as operações básicas, contemplando até adminstradores, meteorologia, cálculo automático de distância percorridas e invalidação de caches. No entanto, nota-se que exista ainda uma necessidade de melhorar a estruturação de forma a suportar um número grande de utilizadores sem prejuízos na performance. De facto, como a estruturação foi modular, cada uma das secções expandiu-se sem ter havido oportunidade de realizar \emph{refactor} entre estes.
